--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
