--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,8 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+server/data.js
+server/database.db
+
+server/createTable.js
